<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="amount_placeholder">0</string>
    <string name="button_calc">Calculate</string>
    <string name="round">Round to the nearest dollar</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip">Tip: </string>

</resources>
