<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
     
     <Button
         android:id="@+id/btnCalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/txtTipResult"
         android:layout_below="@+id/chkRound"
         android:layout_marginBottom="30dp"
         android:onClick="calcTip"
         android:text="@string/button_calc" />
     
     <TextView android:id="@+id/txtTipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnCalculate"
        android:hint="@string/amount_placeholder"
        android:text="@string/tip" />

     <TextView
         android:id="@+id/bill_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/chkRound"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="false"
         android:layout_marginBottom="15dp"
         android:paddingTop="15dp"
         android:text="@string/bill_amount"
         android:textStyle="bold" />

     <CheckBox
         android:id="@+id/chkRound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btnCalculate"
         android:layout_below="@+id/bill_label"
         android:layout_marginBottom="15dp"
         android:checked="true"
         android:text="@string/round" />

     <EditText
         android:id="@+id/edtBillAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/bill_label"
         android:layout_alignBottom="@+id/bill_label"
         android:layout_alignRight="@+id/chkRound"
         android:layout_toRightOf="@+id/btnCalculate"
         android:background="@drawable/box"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/amount_placeholder"
         android:inputType="number" >

         <requestFocus />
     </EditText>

</RelativeLayout>
